# CS-620

./: main.py  pyproject.toml
assignment1/: a1.html  a1.ipynb
lab#2/: readme.txt
lab#2/part-a/: Python Basics.html  Python Basics.ipynb
lab#2/part-b/: book_sales.db  sql functions.html  sql functions.ipynb
lab#2/part-c/: Pandas.html  Pandas.ipynb
