[project]
name = "cs-620"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autoviz>=0.1.905",
    "ipykernel>=6.29.5",
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "missingno>=0.5.2",
    "nbconvert>=7.16.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pkg-resources",
    "pygments>=2.19.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "textblob>=0.19.0",
]
